<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KoombeaAPP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="user">UserName</string>
    <string name="password">Password</string>
    <string name="remenber">Remenber</string>
    <string name="create">Create a new account</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_create_user">CreateUserActivity</string>
    <string name="login_here">Login here</string>
    <string name="title_activity_models">Models</string>
    <string name="pregunta">Don\'t have on account?</string>
    <string name="pregunta_login">Already have an account yet?</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="title_activity_favorite">Favorite</string>
    <string name="validate_user">empty user</string>
    <string name="validate_password">Empty password</string>
    <string name="validate_repeat">Repeat the password empty</string>
    <string name="validate_password_register">Passwords do not match</string>
    <string name="favorite">Favorite</string>
    <string name="title_activity_detail_model">DetailModel</string>
    <string name="album_details">Photo Gallery</string>
    <string name="title_activity_galeria">Galeria</string>
    <string name="validate_incorrect">Username or password incorrect</string>
    <string name="aplication_id">VyI8pUVbCdUUUmR9GoCduOlM8ZRG3Dzd10MBINvr</string>
    <string name="api_key">dmMGWyPG2HLj6KoRuoZOAUxevmI6wjEOgwoQhqnQ</string>
    <string name="modelos">Models</string>

</resources>